// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Multiple platforms > only first platform app is used 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["sns:Publish"],"Resource":["\${aws_sns_topic.Topic.arn}"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "TOPIC_ARN_ea6bd1a2": "\${aws_sns_topic.Topic.arn}",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sns_topic": {
      "Topic": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Topic/Default",
            "uniqueId": "Topic",
          },
        },
        "name": "Topic-c8228fb7",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`Platform examples > AWS target platform > permission-boundary.js 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
        "permissions_boundary": "some:fake:arn:SUPERADMIN",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["s3:PutObject*","s3:Abort*"],"Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BUCKET_NAME_1357ca3a": "\${aws_s3_bucket.Bucket.bucket}",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Bucket": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/Default",
            "uniqueId": "Bucket",
          },
        },
        "bucket_prefix": "bucket-c88fdc5f-",
        "force_destroy": false,
      },
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_bucket_cors_configuration": {
      "Bucket_CorsConfiguration-1357ca3a_A4CCA40A": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/CorsConfiguration-1357ca3a",
            "uniqueId": "Bucket_CorsConfiguration-1357ca3a_A4CCA40A",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "cors_rule": [
          {
            "allowed_headers": [
              "*",
            ],
            "allowed_methods": [
              "GET",
              "POST",
              "PUT",
              "DELETE",
              "HEAD",
            ],
            "allowed_origins": [
              "*",
            ],
            "expose_headers": [],
            "max_age_seconds": 0,
          },
        ],
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`Platform examples > AWS target platform > replicate-s3.js 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_policy": {
      "Bucket_ReplicaDefaultPolicy_5311A90C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefaultPolicy",
            "uniqueId": "Bucket_ReplicaDefaultPolicy_5311A90C",
          },
        },
        "name": "some-prefix\${aws_s3_bucket.Bucket.bucket}",
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["s3:GetReplicationConfiguration","s3:ListBucket"],"Effect":"Allow","Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"]},{"Action":["s3:GetObjectVersionForReplication","s3:GetObjectVersionAcl","s3:GetObjectVersionTagging"],"Effect":"Allow","Resource":"\${aws_s3_bucket.Bucket.arn}/*"},{"Action":["s3:ReplicateObject","s3:ReplicateDelete","s3:ReplicateTags"],"Effect":"Allow","Resource":"\${aws_s3_bucket.Bucket_ReplicaDefault_F9F29351.arn}/*"}]}",
      },
      "ReplicaCodePolicy": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCodePolicy",
            "uniqueId": "ReplicaCodePolicy",
          },
        },
        "name": "some-prefix\${aws_s3_bucket.Code.bucket}",
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["s3:GetReplicationConfiguration","s3:ListBucket"],"Effect":"Allow","Resource":["\${aws_s3_bucket.Code.arn}","\${aws_s3_bucket.Code.arn}/*"]},{"Action":["s3:GetObjectVersionForReplication","s3:GetObjectVersionAcl","s3:GetObjectVersionTagging"],"Effect":"Allow","Resource":"\${aws_s3_bucket.Code.arn}/*"},{"Action":["s3:ReplicateObject","s3:ReplicateDelete","s3:ReplicateTags"],"Effect":"Allow","Resource":"\${aws_s3_bucket.ReplicaCode.arn}/*"}]}",
      },
    },
    "aws_iam_policy_attachment": {
      "Bucket_ReplicaDefaultPolicyAttachment_710AD30F": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefaultPolicyAttachment",
            "uniqueId": "Bucket_ReplicaDefaultPolicyAttachment_710AD30F",
          },
        },
        "name": "some-prefixpolicy-attachment\${aws_s3_bucket.Bucket.bucket}",
        "policy_arn": "\${aws_iam_policy.Bucket_ReplicaDefaultPolicy_5311A90C.arn}",
        "roles": [
          "\${aws_iam_role.Bucket_ReplicaDefaultRole_B700A568.name}",
        ],
      },
      "ReplicaCodePolicyAttachment": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCodePolicyAttachment",
            "uniqueId": "ReplicaCodePolicyAttachment",
          },
        },
        "name": "some-prefixpolicy-attachment\${aws_s3_bucket.Code.bucket}",
        "policy_arn": "\${aws_iam_policy.ReplicaCodePolicy.arn}",
        "roles": [
          "\${aws_iam_role.ReplicaCodeRole.name}",
        ],
      },
    },
    "aws_iam_role": {
      "Bucket_ReplicaDefaultRole_B700A568": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefaultRole",
            "uniqueId": "Bucket_ReplicaDefaultRole_B700A568",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"s3.amazonaws.com"},"Effect":"Allow","Sid":"AllowS3Replication"}]}",
        "name": "some-prefix\${aws_s3_bucket.Bucket.bucket}",
      },
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
      "ReplicaCodeRole": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCodeRole",
            "uniqueId": "ReplicaCodeRole",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"s3.amazonaws.com"},"Effect":"Allow","Sid":"AllowS3Replication"}]}",
        "name": "some-prefix\${aws_s3_bucket.Code.bucket}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["s3:PutObject*","s3:Abort*"],"Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BUCKET_NAME_1357ca3a": "\${aws_s3_bucket.Bucket.bucket}",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Bucket": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/Default",
            "uniqueId": "Bucket",
          },
        },
        "bucket_prefix": "bucket-c88fdc5f-",
        "force_destroy": false,
      },
      "Bucket_ReplicaDefault_F9F29351": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefault",
            "uniqueId": "Bucket_ReplicaDefault_F9F29351",
          },
        },
        "bucket": "some-prefix\${aws_s3_bucket.Bucket.bucket}",
      },
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
      "ReplicaCode": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCode",
            "uniqueId": "ReplicaCode",
          },
        },
        "bucket": "some-prefix\${aws_s3_bucket.Code.bucket}",
      },
    },
    "aws_s3_bucket_cors_configuration": {
      "Bucket_CorsConfiguration-1357ca3a_A4CCA40A": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/CorsConfiguration-1357ca3a",
            "uniqueId": "Bucket_CorsConfiguration-1357ca3a_A4CCA40A",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "cors_rule": [
          {
            "allowed_headers": [
              "*",
            ],
            "allowed_methods": [
              "GET",
              "POST",
              "PUT",
              "DELETE",
              "HEAD",
            ],
            "allowed_origins": [
              "*",
            ],
            "expose_headers": [],
            "max_age_seconds": 0,
          },
        ],
      },
    },
    "aws_s3_bucket_replication_configuration": {
      "Bucket_ReplicaDefaultConfig_A63C952B": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefaultConfig",
            "uniqueId": "Bucket_ReplicaDefaultConfig_A63C952B",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "depends_on": [
          "aws_s3_bucket_versioning.Bucket_ReplicaDefaultVersioning_38F52DB1",
          "aws_s3_bucket_versioning.Bucket_SourceDefaultVersioning_07CBDA44",
        ],
        "role": "\${aws_iam_role.Bucket_ReplicaDefaultRole_B700A568.arn}",
        "rule": [
          {
            "destination": {
              "bucket": "\${aws_s3_bucket.Bucket_ReplicaDefault_F9F29351.arn}",
              "storage_class": "STANDARD",
            },
            "id": "some-prefix\${aws_s3_bucket.Bucket.bucket}",
            "status": "Enabled",
          },
        ],
      },
      "ReplicaCodeConfig": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCodeConfig",
            "uniqueId": "ReplicaCodeConfig",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.id}",
        "depends_on": [
          "aws_s3_bucket_versioning.ReplicaCodeVersioning",
          "aws_s3_bucket_versioning.SourceCodeVersioning",
        ],
        "role": "\${aws_iam_role.ReplicaCodeRole.arn}",
        "rule": [
          {
            "destination": {
              "bucket": "\${aws_s3_bucket.ReplicaCode.arn}",
              "storage_class": "STANDARD",
            },
            "id": "some-prefix\${aws_s3_bucket.Code.bucket}",
            "status": "Enabled",
          },
        ],
      },
    },
    "aws_s3_bucket_versioning": {
      "Bucket_ReplicaDefaultVersioning_38F52DB1": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/ReplicaDefaultVersioning",
            "uniqueId": "Bucket_ReplicaDefaultVersioning_38F52DB1",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket_ReplicaDefault_F9F29351.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "Bucket_SourceDefaultVersioning_07CBDA44": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/SourceDefaultVersioning",
            "uniqueId": "Bucket_SourceDefaultVersioning_07CBDA44",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "ReplicaCodeVersioning": {
        "//": {
          "metadata": {
            "path": "root/Default/ReplicaCodeVersioning",
            "uniqueId": "ReplicaCodeVersioning",
          },
        },
        "bucket": "\${aws_s3_bucket.ReplicaCode.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "SourceCodeVersioning": {
        "//": {
          "metadata": {
            "path": "root/Default/SourceCodeVersioning",
            "uniqueId": "SourceCodeVersioning",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`Platform examples > AWS target platform > tf-backend.js > azurerm backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["s3:PutObject*","s3:Abort*"],"Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BUCKET_NAME_1357ca3a": "\${aws_s3_bucket.Bucket.bucket}",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Bucket": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/Default",
            "uniqueId": "Bucket",
          },
        },
        "bucket_prefix": "bucket-c88fdc5f-",
        "force_destroy": false,
      },
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_bucket_cors_configuration": {
      "Bucket_CorsConfiguration-1357ca3a_A4CCA40A": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/CorsConfiguration-1357ca3a",
            "uniqueId": "Bucket_CorsConfiguration-1357ca3a_A4CCA40A",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "cors_rule": [
          {
            "allowed_headers": [
              "*",
            ],
            "allowed_methods": [
              "GET",
              "POST",
              "PUT",
              "DELETE",
              "HEAD",
            ],
            "allowed_origins": [
              "*",
            ],
            "expose_headers": [],
            "max_age_seconds": 0,
          },
        ],
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`Platform examples > AWS target platform > tf-backend.js > gcp backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["s3:PutObject*","s3:Abort*"],"Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BUCKET_NAME_1357ca3a": "\${aws_s3_bucket.Bucket.bucket}",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Bucket": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/Default",
            "uniqueId": "Bucket",
          },
        },
        "bucket_prefix": "bucket-c88fdc5f-",
        "force_destroy": false,
      },
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_bucket_cors_configuration": {
      "Bucket_CorsConfiguration-1357ca3a_A4CCA40A": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/CorsConfiguration-1357ca3a",
            "uniqueId": "Bucket_CorsConfiguration-1357ca3a_A4CCA40A",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "cors_rule": [
          {
            "allowed_headers": [
              "*",
            ],
            "allowed_methods": [
              "GET",
              "POST",
              "PUT",
              "DELETE",
              "HEAD",
            ],
            "allowed_origins": [
              "*",
            ],
            "expose_headers": [],
            "max_age_seconds": 0,
          },
        ],
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`Platform examples > AWS target platform > tf-backend.js > s3 backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/CloudwatchLogGroup",
            "uniqueId": "Queue-SetConsumer0_CloudwatchLogGroup_56C2891C",
          },
        },
        "name": "/aws/lambda/Queue-SetConsumer0-c83c303c",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer0_IamRole_7F9ED9ED": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRole",
            "uniqueId": "Queue-SetConsumer0_IamRole_7F9ED9ED",
          },
        },
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer0_IamRolePolicy_0299B5AB": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicy",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicy_0299B5AB",
          },
        },
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["sqs:ReceiveMessage","sqs:ChangeMessageVisibility","sqs:GetQueueUrl","sqs:DeleteMessage","sqs:GetQueueAttributes"],"Resource":["\${aws_sqs_queue.Queue.arn}"],"Effect":"Allow"},{"Action":["s3:PutObject*","s3:Abort*"],"Resource":["\${aws_s3_bucket.Bucket.arn}","\${aws_s3_bucket.Bucket.arn}/*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/IamRolePolicyAttachment",
            "uniqueId": "Queue-SetConsumer0_IamRolePolicyAttachment_4A4C5C5D",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/EventSourceMapping",
            "uniqueId": "Queue_EventSourceMapping_8332F7DC",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer0.function_name}",
        "function_response_types": [
          "ReportBatchItemFailures",
        ],
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer0": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/Default",
            "uniqueId": "Queue-SetConsumer0",
          },
        },
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BUCKET_NAME_1357ca3a": "\${aws_s3_bucket.Bucket.bucket}",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer0-c83c303c",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "Queue-SetConsumer0-c83c303c",
        "handler": "index.handler",
        "logging_config": {
          "log_format": "JSON",
        },
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer0_IamRole_7F9ED9ED.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer0_S3Object_2AD0A795.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Bucket": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/Default",
            "uniqueId": "Bucket",
          },
        },
        "bucket_prefix": "bucket-c88fdc5f-",
        "force_destroy": false,
      },
      "Code": {
        "//": {
          "metadata": {
            "path": "root/Default/Code",
            "uniqueId": "Code",
          },
        },
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_bucket_cors_configuration": {
      "Bucket_CorsConfiguration-1357ca3a_A4CCA40A": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Bucket/CorsConfiguration-1357ca3a",
            "uniqueId": "Bucket_CorsConfiguration-1357ca3a_A4CCA40A",
          },
        },
        "bucket": "\${aws_s3_bucket.Bucket.id}",
        "cors_rule": [
          {
            "allowed_headers": [
              "*",
            ],
            "allowed_methods": [
              "GET",
              "POST",
              "PUT",
              "DELETE",
              "HEAD",
            ],
            "allowed_origins": [
              "*",
            ],
            "expose_headers": [],
            "max_age_seconds": 0,
          },
        ],
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer0_S3Object_2AD0A795": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue-SetConsumer0/S3Object",
            "uniqueId": "Queue-SetConsumer0_S3Object_2AD0A795",
          },
        },
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "//": {
          "metadata": {
            "path": "root/Default/Default/Queue/Default",
            "uniqueId": "Queue",
          },
        },
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;
